--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,32 +6,27 @@
 trigger:
 - main
 
-pool:
-  vmImage: "ubuntu-latest"
-  
 strategy:
   matrix:
-    jdk10:
+    jdk10_linux:
+      imageName: "ubuntu-latest"
       jdkVersion: "1.10"
-    jdk11:
+    jdk11_windows:
+      imageName: "windows-latest"
       jdkVersion: "1.11"
   maxParallel: 2
 
-steps:
-- task: Maven@3
-  inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: $(jdkVersion)
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+pool:
+  vmImage: $(imageName)
 
-- task: PublishCodeCoverageResults@1
+steps:
+- task: Maven@4
   inputs:
-    codeCoverageTool: "JaCoCo"
-    summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/site/jacoco/jacoco.xml"
-    reportDirectory: "$(System.DefaultWorkingDirectory)/**/site/jacoco"
-    failIfCoverageEmpty: true
+    mavenPomFile: "pom.xml"
+    mavenOptions: "-Xmx3072m"
+    javaHomeOption: "JDKVersion"
+    jdkVersionOption: $(jdkVersion)
+    jdkArchitectureOption: "x64"
+    publishJUnitResults: true
+    testResultsFiles: "**/TEST-*.xml"
+    goals: "package"
